Art-Net ESTA manufacturer codes are not labelled after dissection
This issue was migrated from bug 7407 in our old bug tracker.
Original bug information:
Reporter: gar…@phy…
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: 1.4.4
Attachments:
Art-NetOemCodes.h: Art-Net OEM manufacturer codes for 1.4be specification.
packet-artnet.c.patch: Updated ESTA manufacturer IDs + OEM code values
packet-artnet.c.patch: Updated ESTA manufacturer IDs + OEM code values v2