Fix incorrect(duplicate) value in artnet_oem_code_vals[] value string array;

{ 0x0ae0, "chainzone:RoundTable:0 DMX Inputs,
   ...
-  { 0x0ae0, "STC Mecatronica:DDR 2404 Digital Dimmer Rack:...
+  { 0x0b00, "STC Mecatronica:DDR 2404 Digital Dimmer Rack:...

Correct value obtained from Bug #7407 attachment #8684:
  "Art-Net OEM manufacturer codes for 1.4be specification"
     https://bugs.wireshark.org/bugzilla/attachment.cgi?id=8684

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=7407

(Issue noticed because value_string_ext search was 'linear' for this array).


svn path=/trunk/; revision=43689